; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/techempower/extr_json.c_json_stringify_length.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/techempower/extr_json.c_json_stringify_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @json_stringify_length(i32* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = call i32 @sb_init(i32* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @emit_value_indented(i32* %7, i32* %12, i8* %13, i32 0)
  br label %18

15:                                               ; preds = %3
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @emit_value(i32* %7, i32* %16)
  br label %18

18:                                               ; preds = %15, %11
  %19 = load i64*, i64** %6, align 8
  %20 = call i8* @sb_finish_length(i32* %7, i64* %19)
  ret i8* %20
}

declare dso_local i32 @sb_init(i32*) #1

declare dso_local i32 @emit_value_indented(i32*, i32*, i8*, i32) #1

declare dso_local i32 @emit_value(i32*, i32*) #1

declare dso_local i8* @sb_finish_length(i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
